fix: avatar not showing

--- a/main.css
+++ b/main.css
@@ -145,7 +145,7 @@ a {
     height: 100%;
     width: 100%;
     border-radius: 50%;
-    margin-top: 8%;
+    margin: 0;
     object-fit: cover;
     transform: translateZ(0);
     transition: transform 0.3s ease;
